backend/kubernetes/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app
  labels:
    app: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
        - image: molero3111/app_images:notes.v1
          imagePullPolicy: Always
          name: notes
          ports:
            - containerPort: 8000
              name: gunicorn
          volumeMounts:
            - name: media-volume-mount
              mountPath: /app/media
      imagePullSecrets:
        - name: docker-auth
      volumes:
        - name: media-volume-mount
          persistentVolumeClaim:
            claimName: notes-media-pvc
