backend/kubernetes/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app
  labels:
    app: notes
spec:
  type: NodePort
  selector:
      app: notes
  ports:
    - port: 8000
      targetPort: 8000
