backend/kubernetes/api/development-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /notes-app
        pathType: Prefix
        backend:
          service:
            name: notes-app
            port:
              number: 8000
