backend/kubernetes/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
spec:
  rules:
  - host: emmanuelcodinghub.com
    http:
      paths:
      - path: /notes-app
        pathType: Prefix
        backend:
          service:
            name: notes-app
            port:
              number: 8000
  tls:
  - hosts:
    - emmanuelcodinghub.com
    secretName: tls-notes-secret
